--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Bienes raices</title>
+    <script src="https://kit.fontawesome.com/b06732fd2a.js" crossorigin="anonymous"></script>
+    <title>Vue Chicha Store</title>
   </head>
   <body>
     <div id="app"></div>
